--- a/css/responsive.css
+++ b/css/responsive.css
@@ -98,6 +98,18 @@
     }
 }
 
+@media (max-width: 768px) {
+    .about-us-content {
+      flex-direction: column;
+    }
+  
+    .about-us-image,
+    .about-us-text {
+      max-width: 100%;
+      flex: 1 1 100%;
+    }
+}
+
 @media (min-width: 576px) and (max-width: 767px) {
     .text-bg h1 {
         font-size: 70px;
